@@ -1,3 +1,8 @@
+PDF manuals uploaded (07 May 2011) by Willis
+We now generate PDF versions for both the user manual and the reference manual.
+The user manual is available both standalone and as part of the reference
+manual.
+
 1.8.0 released (13 Aug 2010) by Willis
 Fully updated to Vim 7.3.
 
